--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "puppeteer": "^24.31.0",
+    "puppeteer-core": "^24.31.0",
     "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "@google-cloud/storage": "^7.7.0"
   }
 }
