--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "puppeteer-core": "^24.31.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "@google-cloud/storage": "^7.7.0"
+    "@google-cloud/storage": "^7.7.0",
+    "firebase-admin": "^12.0.0"
   }
 }
